# chainerx_beta_test

./: README.md  chx_module.py  main.py
chx_cc/: CMakeLists.txt
